// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should render as row 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.6rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 0.6rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 1.6rem;
  height: 1.6rem;
  border: 1px solid hsl(207,22%,90%);
  border-radius: 50%;
  background: linear-gradient( 0deg,hsl(240,33%,99%) 0%,hsl(0,100%,100%) 100% );
  box-shadow: inset 0 2px 0 0 hsla(0,100%,100%,0.05),0 1px 1px 0 hsl(240,33%,99%);
  -webkit-transition: background-color ease 0.25s;
  transition: background-color ease 0.25s;
}

.c3 {
  display: block;
  cursor: pointer;
  position: relative;
  margin-left: 0.7rem;
  color: hsl(207,13%,45%);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <input
        id="artichoke"
        name="vegetable"
        type="radio"
        value="artichoke"
      />
    </div>
    <label
      class="c3"
      for="artichoke"
    >
      artichoke
    </label>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <input
        id="beetroot"
        name="vegetable"
        type="radio"
        value="beetroot"
      />
    </div>
    <label
      class="c3"
      for="beetroot"
    >
      beetroot
    </label>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <input
        id="pumpkin"
        name="vegetable"
        type="radio"
        value="pumpkin"
      />
    </div>
    <label
      class="c3"
      for="pumpkin"
    >
      pumpkin
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should render without a problem 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.6rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 0.6rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 1.6rem;
  height: 1.6rem;
  border: 1px solid hsl(207,22%,90%);
  border-radius: 50%;
  background: linear-gradient( 0deg,hsl(240,33%,99%) 0%,hsl(0,100%,100%) 100% );
  box-shadow: inset 0 2px 0 0 hsla(0,100%,100%,0.05),0 1px 1px 0 hsl(240,33%,99%);
  -webkit-transition: background-color ease 0.25s;
  transition: background-color ease 0.25s;
}

.c3 {
  display: block;
  cursor: pointer;
  position: relative;
  margin-left: 0.7rem;
  color: hsl(207,13%,45%);
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <input
        id="artichoke"
        name="vegetable"
        type="radio"
        value="artichoke"
      />
    </div>
    <label
      class="c3"
      for="artichoke"
    >
      artichoke
    </label>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <input
        id="beetroot"
        name="vegetable"
        type="radio"
        value="beetroot"
      />
    </div>
    <label
      class="c3"
      for="beetroot"
    >
      beetroot
    </label>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <input
        id="pumpkin"
        name="vegetable"
        type="radio"
        value="pumpkin"
      />
    </div>
    <label
      class="c3"
      for="pumpkin"
    >
      pumpkin
    </label>
  </div>
</div>
`;
